# jetporch

./: .gitignore  .rustfmt.toml  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  TODO.md  build.rs  version.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: 01_bug_report.md  02_docs_report.md  config.yml
ISSUE_TEMPLATE/: 02_docs_report.md
contrib/inventory/: README.md  abiquo.ini  abiquo.py  apache-libcloud.py  apstra_aos.ini  azure_rm.py  cloudforms.ini  cloudforms.py  cloudstack.py  cobbler.ini  cobbler.py  consul_io.py  digital_ocean.ini  digital_ocean.py  docker.py  docker.yml  ec2.ini  ec2.py  fleet.py  foreman.ini  foreman.py  freeipa.py  gce.ini  gce.py  jail.py  landscape.py  libcloud.ini  libvirt_lxc.py  linode.ini  linode.py  lxc_inventory.py  lxd.py  nagios_livestatus.ini  nagios_livestatus.py  nagios_ndo.py  nsot.py  openshift.py  openstack_inventory.py  openvz.py  ovirt.ini  (+22 more)
examples/: Makefile  README.md
examples/playbooks/: external.yml  facts.yml  git.yml  ignore_errors.yml  items.yml  learning_assert.yml  redis.yml  retry.yml  shell_tricks.yml
src/: main.rs
src/cli/: mod.rs  parser.rs  playbooks.rs  show.rs  syntax.rs
src/connection/: cache.rs  command.rs  connection.rs  factory.rs  local.rs  mod.rs  no.rs  ssh.rs
src/handle/: handle.rs  local.rs  mod.rs  remote.rs  response.rs  template.rs
src/inventory/: group.rs  groups.rs  host.rs  hosts.rs  inventory.rs  loading.rs  mod.rs
src/module_base/: common.rs  list.rs  mod.rs
src/module_library/: echo.rs  external.rs  include.rs  mod.rs  shell.rs
src/modules/: copy.rs  echo.rs  file.rs  mod.rs  shell.rs  template.rs
src/playbooks/: context.rs  handlebars_helpers.rs  language.rs  mod.rs  t_helpers.rs  task_fsm.rs  templar.rs  traversal.rs  visitor.rs
src/registry/: list.rs  mod.rs
src/runner/: mod.rs  task_fsm.rs  task_handle.rs
src/tasks/: checksum.rs  cmd_library.rs  common.rs  fields.rs  files.rs  handle.rs  logic.rs  mod.rs  request.rs  response.rs
src/util/: data.rs  io.rs  (+3 more)
(+93 files in other folders)
