[package]
name = "jetp"
build = "build.rs"
version = "0.1.0"
edition = "2021"

[build-dependencies]
built = { version = "0.6", features = ["chrono","git2"] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
built = { version = "0.6", features = ["chrono"] }
once_cell="1.18.0"
ssh2 = "0.9.4"
serde_derive = "=1.0.171"
serde = { version = "1.0.171",  features = ["derive"] }
serde_yaml = "0.9.25"
termimad = "0.20"
inline_colorization = "0.1.5"
rayon = "1.7.0"
handlebars = "4.3.7"
rs_sha512="0.1.3"
