[package]
name = "jetp"
version = "0.1.1"
edition = "2021"
license = "GPL-3.0-or-later"
description="automation platform"
homepage="https://www.jetporch.com/"
documentation="https://www.jetporch.com/"
repository="https://github.com/jetporch/jetporch"
readme="README.md"
keywords=["automation","devops","deployment","ssh"]
include=["src/","version.sh"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell="1.18.0"
ssh2="0.9.4"
serde_derive= "=1.0.171"
serde= { version = "1.0.171",  features = ["derive"] }
serde_yaml="0.9.25"
serde_json = {version = "1.0.105", features = ["preserve_order"]} 
termimad="0.20"
inline_colorization="0.1.5"
rayon="1.7.0"
handlebars="4.3.7"
sha2="0.10.8"
guid-create="0.3.1"
expanduser="1.2.2"
indexmap = {version = "2.1.0", features = ["serde"]}
chrono="0.4.31"
